--- a/ghost/admin/app/styles/patterns/global.css
+++ b/ghost/admin/app/styles/patterns/global.css
@@ -16,7 +16,7 @@
     --green: #30cf43;
     --purple: #8e42ff;
     --yellow: #ffb41f;
-    --red: #ff344a;
+    --red: #fb2d42;
     --pink: #fb2d8d;
 
     /* Gradients */
